fix params issue, working now, need to implement services
